[UPDATE] Added new dependencies and updated the method to interact with NASA API [Author] Erika Sánchez Femat
-- Modified method to fetch data from NASA

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ black = "*"
 matplotlib = "*"
 requests = "*"
 loguru = "*"
+extcolors = "*"
+colormap = "*"
+pandas = "*"
+easydev = "*"
 
 [dev-packages]
 
